--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -1,5 +1,5 @@
 package:
-   name: intake-iris
+   name: intake-dynamodb
    version: {{ GIT_DESCRIBE_TAG }}
 
 source:
@@ -17,10 +17,10 @@ requirements:
     - python
     - jinja2
   run:
-    - intake>=0.2
     - python
+    - intake>=0.2
     - scipy
-    - iris
+    - boto3
 
 test:
   source_files:
@@ -31,8 +31,8 @@ test:
     - py.test --verbose
 
 about:
-  home: https://github.com/informaticslab/intake-iris
+  home: https://github.com/informaticslab/intake-dynamodb
   license: BSD
   license_file: LICENSE
   summary: |
-    iris plugins for Intake
+    dynamodb plugins for Intake
