--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,4 +1,4 @@
-name: intake-dynamodb
+name: intake_dynamodb
 channels:
   - intake
   - informaticslab
@@ -6,7 +6,7 @@ channels:
 dependencies:
   - python=3.6
   - intake
-  - intake-dynamodb
+  - intake_dynamodb
   - boto3
   - pip:
     - sphinx
