--- a/tests/test.yaml
+++ b/tests/test.yaml
@@ -27,3 +27,8 @@ sources:
       table_name: 'example-small-table-different-account'
       sts_role_arn: 'arn:aws:iam::ACCOUNT_ID:role/ROLE_NAME'
       region_name: 'us-west-2'
+  example_small_s3_export:
+    description: example small dynamodb table exported to s3
+    driver: dynamodbjson
+    args:
+      s3_path: 's3://example-bucket/AWSDynamoDB/0123456789-abcdefgh'
