--- a/tests/test.yaml
+++ b/tests/test.yaml
@@ -32,3 +32,8 @@ sources:
     driver: dynamodbjson
     args:
       s3_path: 's3://example-bucket/AWSDynamoDB/0123456789-abcdefgh'
+  example_partitioned_s3_export:
+    description: example big dynamodb table exported to s3
+    driver: dynamodbjson
+    args:
+      s3_path: 's3://example-bucket/AWSDynamoDB/0123456789-abcdefgh2'
