--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,17 +6,34 @@ build-backend = "setuptools.build_meta"
 name = "intake-dynamodb"
 description = "Intake plugin for reading data from dynamodb"
 authors = [{name = "Ray Bell", email = "rayjohnbell0@gmail.com"}]
-dynamic = ["dependencies", "readme", "version"]
-
-[project.urls]
-repository = "https://github.com/intake-dynamodb/intake-dynamodb"
+dependencies = [
+    "dask[dataframe]",
+    "dask-awkward",
+    "intake",
+    "s3fs",
+]
+dynamic = ["readme", "version"]
 
 [project.entry-points."intake.drivers"]
 dynamodb = "intake_dynamodb.dynamodb:DynamoDBSource"
 dynamodbjson = "intake_dynamodb.dynamodb:DynamoDBJSONSource"
 
+[project.optional-dependencies]
+complete = [
+    "black",
+    "moto[dynamodbls,s3]",
+    "mypy",
+    "pre-commit",
+    "pytest",
+    "ruff",
+    "yamllint",
+]
+
+[project.urls]
+repository = "https://github.com/intake-dynamodb/intake-dynamodb"
+
+
 [tool.setuptools.dynamic]
-dependencies = {file = ["requirements.txt"]}
 readme = {file = ["README.md"], content-type = "text/markdown"}
 version = {attr = "intake_dynamodb.__version__"}
 
