--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,8 +25,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -r requirements.txt -r dev-requirements.txt
-        python -m pip install -e .
+        python -m pip install -e ".[dev]"
         python -m pip freeze
     - name: Pre-commit hooks
       run: |
