--- a/tests/test.yaml
+++ b/tests/test.yaml
@@ -8,11 +8,13 @@ sources:
     driver: dynamodb
     args:
       table_name: 'example-small-table'
+      region_name: 'us-east-1'
   example_small_table_filtered_num:
     description: example small dynamodb table with a numeric filter
     driver: dynamodb
     args:
       table_name: 'example-small-table'
+      region_name: 'us-east-1'
       filter_expression: 'ag = :ag_value'
       filter_expression_value: 30
   example_small_table_filtered_str:
@@ -20,6 +22,7 @@ sources:
     driver: dynamodb
     args:
       table_name: 'example-small-table'
+      region_name: 'us-east-1'
       filter_expression: 'nm = :nm_value'
       filter_expression_value: 'John Doe'
   example_big_table:
@@ -27,6 +30,7 @@ sources:
     driver: dynamodb
     args:
       table_name: 'example-big-table'
+      region_name: 'us-east-1'
   example_small_table_different_account:
     description: example small dynamodb table in a different AWS account
     driver: dynamodb
