--- a/tests/test.yaml
+++ b/tests/test.yaml
@@ -43,6 +43,15 @@ sources:
     driver: dynamodbjson
     args:
       s3_path: 's3://example-bucket/AWSDynamoDB/0123456789-abcdefgh'
+  example_small_s3_export_with_kwargs:
+    description: example small dynamodb table exported to s3
+    driver: dynamodbjson
+    args:
+      s3_path: 's3://example-bucket/AWSDynamoDB/0123456789-abcdefgh'
+      storage_options:
+        profile: 'dev'
+      config_kwargs:
+        read_timeout: 3600
   example_partitioned_s3_export:
     description: example big dynamodb table exported to s3
     driver: dynamodbjson
